--- a/src/org/oop/view/agenda/Attivita.form
+++ b/src/org/oop/view/agenda/Attivita.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.agenda.AttivitaEventoView">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.agenda.Attivita">
   <grid id="27dc6" binding="activitypanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="15" bottom="4" right="4"/>
     <constraints>
@@ -38,7 +38,7 @@
           </hspacer>
         </children>
       </grid>
-      <grid id="de024" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="de024" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -50,7 +50,7 @@
         <children>
           <component id="d157" class="javax.swing.JLabel" binding="activityname">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font size="14" style="1"/>
@@ -60,26 +60,11 @@
           </component>
           <component id="9c278" class="javax.swing.JLabel" binding="hourStart">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <foreground awt-color="black"/>
               <text value="Ora inizio:"/>
-            </properties>
-          </component>
-          <component id="c90b0" class="javax.swing.JLabel" binding="hourEnd">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Ora fine:"/>
-            </properties>
-          </component>
-          <component id="7401d" class="javax.swing.JLabel" binding="dayField">
-            <constraints>
-              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Giorno:"/>
             </properties>
           </component>
           <component id="84bc1" class="javax.swing.JLabel" binding="teacher">
@@ -87,32 +72,68 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <foreground color="-2763564"/>
+              <foreground color="-16166704"/>
               <text value="Professore"/>
-            </properties>
-          </component>
-          <component id="19ce8" class="javax.swing.JLabel" binding="luogoField">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Aula"/>
-            </properties>
-          </component>
-          <component id="edf09" class="javax.swing.JLabel" binding="dataField">
-            <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Data:"/>
             </properties>
           </component>
           <component id="f2b2f" class="javax.swing.JLabel" binding="tipoEsameField">
             <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground awt-color="black"/>
+              <text value="Tipo esame:"/>
+            </properties>
+          </component>
+          <component id="341a0" class="javax.swing.JLabel" binding="ruoloField">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="88" height="16"/>
+              </grid>
+            </constraints>
+            <properties>
+              <foreground awt-color="gray"/>
+              <text value="( ruolo )"/>
+            </properties>
+          </component>
+          <component id="19ce8" class="javax.swing.JLabel" binding="luogoField">
+            <constraints>
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Tipo esame:"/>
+              <foreground awt-color="black"/>
+              <text value="Aula"/>
+            </properties>
+          </component>
+          <component id="c90b0" class="javax.swing.JLabel" binding="hourEnd">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="88" height="16"/>
+              </grid>
+            </constraints>
+            <properties>
+              <foreground awt-color="black"/>
+              <text value="Ora fine:"/>
+            </properties>
+          </component>
+          <component id="7401d" class="javax.swing.JLabel" binding="dayField">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="88" height="16"/>
+              </grid>
+            </constraints>
+            <properties>
+              <foreground awt-color="black"/>
+              <text value="Giorno:"/>
+            </properties>
+          </component>
+          <component id="edf09" class="javax.swing.JLabel" binding="dataField">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground awt-color="black"/>
+              <text value="Data:"/>
             </properties>
           </component>
         </children>
